prevent sidebar x-axis overflow scrollbar

--- a/src/modules/App/App.css
+++ b/src/modules/App/App.css
@@ -10,7 +10,8 @@
   margin-bottom: 0px;
   width: 300px;
   resize: horizontal;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content {
